Implemented delail page for room

--- a/hotel/templates/hotel/index.html
+++ b/hotel/templates/hotel/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<a lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Отель</title>
@@ -7,12 +7,12 @@
 <p>
     <h1>Все номера отеля</h1>
     {% for room in all_rooms %}
-        {{ room }}<br>
+        <a href="{% url 'room_detail' room_id=room.number %}">{{ room }}</a><br>
         Вмещает людей: {{ room.number_of_people }}<br>
         Площадь: {{ room.room_area }}<br>
         Люкс: {{ room.is_lux }}<br>
         Цена: {{ room.price }} USD<br>
-        <i>Забронировано: {{ room.is_booked }}</i>><br>
+        <i>Забронировано: {{ room.is_booked }}</i><br>
         <hr>
     {% endfor %}
 </body>
