Implemented possibility to book a room (added booking form, making changes to the model)

--- a/hotel/templates/hotel/index.html
+++ b/hotel/templates/hotel/index.html
@@ -7,9 +7,9 @@
 <p>
     <h1>Все номера отеля</h1>
     {% for room in all_rooms %}
-        <a href="{% url 'room_detail' room_id=room.number %}">{{ room }}</a><br>
+        <a href="{% url 'room-detail' room_id=room.number %}">{{ room }}</a><br>
         Вмещает людей: {{ room.number_of_people }}<br>
-        Площадь: {{ room.room_area }}<br>
+        Площадь: {{ room.room_area }} кв.м.<br>
         Люкс: {{ room.is_lux }}<br>
         Цена: {{ room.price }} USD<br>
         <i>Забронировано: {{ room.is_booked }}</i><br>
@@ -17,3 +17,4 @@
     {% endfor %}
 </body>
 </html>
+
