--- a/hotel/templates/hotel/room_detail.html
+++ b/hotel/templates/hotel/room_detail.html
@@ -11,32 +11,31 @@
         Люкс: {{ room.is_lux }}<br><br>
         Цена: {{ room.price }} USD<br><br>
         Описание: {{ room.description }}<br><br>
-        <i>Забронировано: {{ room.is_booked }}</i><br><br>
-        {% if room.is_booked %}
-            <i>Бронь с: {{ room.booking_room.last.date_from|date:"d-M-Y" }}
-                по: {{ room.booking_room.last.date_to|date:"d-M-Y" }}</i>
-        {% else %}
-            <form action="{% url 'room-booking'  room_id=room.number%}" method="POST">
-                {% csrf_token %}
-                <p><b>Бронирование</b></p>
-                <p>
-                    <label for="date_from">Дата с:</label>
-                    <input type="date" name="date_from" id="date_from">
-                </p>
+        <b><i>Актуальные брони: </i></b><br>
+        {% for booking in room.booking_room.all %}
+        <i>с {{ booking.date_from|date:"d-M-Y" }}  по {{ booking.date_to|date:"d-M-Y" }}</i><br>
+        {% endfor %}
+        <br>
+        <form action="{% url 'room-booking'  room_id=room.number%}" method="POST">
+            {% csrf_token %}
+            <p><b>Бронирование</b></p>
+            <p>
+                <label for="date_from">Дата с:</label>
+                <input type="date" name="date_from" id="date_from">
+            </p>
 
-                <p>
-                    <label for="date_to">Дата по:</label>
-                    <input type="date" name="date_to" id="date_to">
-                </p>
+            <p>
+                <label for="date_to">Дата по:</label>
+                <input type="date" name="date_to" id="date_to">
+            </p>
 
-                <p>
-                    <label for="description">Описание бронирования: </label><br/>
-                    <textarea name="description" id="description" placeholder="Не более 200 символов"
-                              maxlength="200"></textarea>
-                </p>
+            <p>
+                <label for="description">Описание бронирования: </label><br/>
+                <textarea name="description" id="description" placeholder="Не более 200 символов"
+                          maxlength="200"></textarea>
+            </p>
 
-                <input type="submit" value="Забронировать">
-            </form>
-        {% endif %}
+            <input type="submit" value="Забронировать">
+        </form>
 </body>
 </html>
