--- a/sales_manager/templates/sales_manager/book_detail.html
+++ b/sales_manager/templates/sales_manager/book_detail.html
@@ -3,12 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
+<div class="container">
   <h1>Book detail page</h1>
     {{ book.title }}<br>
     {{ book.text }} <br>
+    {{ book.count_likes }}
     <i>{{ book.author }}</i><br>
-    {{ book.date_publish|date:"m-Y" }} <br><br>
+    {{ book.date_publish|date:"d-m-Y" }} <br><br>
+        {% for comment in book.comments.all %}
+            <p>{{ comment.text }}</p>
+            <p>Date: {{ comment.date|date:"d-m-Y H:i:s" }}</p>
+            <p>Author: {{ comment.user.username }}</p>
+            <p>Likes: {{ comment.count_likes }}</p>
+        {% endfor %}
+        <br>
+
+    <form action="{% url 'add-comment' book_id=book.id %}" method="post">
+        {% csrf_token %}
+        <div class="form-group">
+        <label for="comment">Comment:</label>
+        <textarea class="form-control" rows="5" id="comment" name="text" required></textarea>
+        </div>
+        <button type="submit" class="btn btn-warning">OK</button>
+    </form>
+</div>
 </body>
 </html>
