Add login/logout on the hotel.index page Edit templates in app hotel Add fields in model Rating in app hotel

--- a/hotel/templates/hotel/ratings.html
+++ b/hotel/templates/hotel/ratings.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Отзывы об отеле</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
+<div class="container">
     <form action="{% url 'add-rating' %}" method="POST">
     {% csrf_token %}
         <h1>Оставить отзыв</h1>
@@ -40,5 +42,6 @@
         </p>
         <input type="submit" value="Отправить">
     </form>
+</div>
 </body>
 </html>
