--- a/hotel/templates/hotel/index.html
+++ b/hotel/templates/hotel/index.html
@@ -3,8 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Отель</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
-<p>
+<body>
+<div class="container">
+{{ user.username }}
+{% if user.is_authenticated %}
+    <a href="{% url 'logout' %}">logout</a>
+{% else %}
+    <a href="{% url 'login' %}">login</a>
+{% endif %}
     <h1>Отель</h1>
     <a href="{% url 'hotel-rating' %}"> Оставить отзыв об отеле</a><br><br>
 
@@ -18,7 +26,7 @@
         <hr>
     {% endfor %}
 
-
+</div>
 </body>
 </html>
 
