--- a/hotel/templates/hotel/room_detail.html
+++ b/hotel/templates/hotel/room_detail.html
@@ -3,39 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <title>Номер отеля</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-        <h1>{{ room }}</h1>
-        Вмещает людей: {{ room.number_of_people }}<br><br>
-        Площадь: {{ room.room_area }}<br><br>
-        Люкс: {{ room.is_lux }}<br><br>
-        Цена: {{ room.price }} USD<br><br>
-        Описание: {{ room.description }}<br><br>
-        <b><i>Актуальные брони: </i></b><br>
+<div class="container">
+    <h1>{{ room }}</h1>
+    <p>Вмещает людей: {{ room.number_of_people }}<br>
+    Площадь: {{ room.room_area }}<br>
+    Люкс: {{ room.is_lux }}<br>
+    Цена: {{ room.price }} USD<br>
+    Описание: {{ room.description }}</p>
+    <hr>
+    <p><b>Отзывы клиентов</b></p>
+    <p>Средняя оценка по категориям:<br>
+    Качество обслуживания<br>
+    Чистота<br>
+    Приветливость персонала<br>
+    Качество оборудования<br>
+    Качество еды<br>
+    Расположение<br>
+    Состояние прилегающей территории<br>
+    </p>
+
+    <hr>
+    <p><b>Актуальные брони </b></p>
+    <p>
         {% for booking in room.booking_room.all %}
         <i>с {{ booking.date_from|date:"d-M-Y" }}  по {{ booking.date_to|date:"d-M-Y" }}</i><br>
         {% endfor %}
-        <br>
-        <form action="{% url 'room-booking'  room_id=room.number%}" method="POST">
-            {% csrf_token %}
-            <p><b>Бронирование</b></p>
-            <p>
-                <label for="date_from">Дата с:</label>
-                <input type="date" name="date_from" id="date_from">
-            </p>
+    </p>
+    <hr>
+    <form action="{% url 'room-booking'  room_id=room.number%}" method="POST">
+        {% csrf_token %}
+        <p><b>Бронирование</b></p>
+        <p>
+            <label for="date_from">Дата с:</label>
+            <input type="date" name="date_from" id="date_from">
+        </p>
 
-            <p>
-                <label for="date_to">Дата по:</label>
-                <input type="date" name="date_to" id="date_to">
-            </p>
+        <p>
+            <label for="date_to">Дата по:</label>
+            <input type="date" name="date_to" id="date_to">
+        </p>
 
-            <p>
-                <label for="description">Описание бронирования: </label><br/>
-                <textarea name="description" id="description" placeholder="Не более 200 символов"
-                          maxlength="200"></textarea>
-            </p>
+        <p>
+            <label for="description">Описание бронирования: </label><br/>
+            <textarea name="description" id="description" placeholder="Не более 200 символов"
+                      maxlength="200"></textarea>
+        </p>
 
-            <input type="submit" value="Забронировать">
-        </form>
+        <input type="submit" value="Забронировать">
+    </form>
+</div>
 </body>
 </html>
