Improved rating page in hotel app and function for calculating ratings

--- a/hotel/templates/hotel/index.html
+++ b/hotel/templates/hotel/index.html
@@ -14,7 +14,7 @@
     <a href="{% url 'login' %}">login</a>
 {% endif %}
     <h1>Отель</h1>
-    <a href="{% url 'hotel-rating' %}"> Оставить отзыв об отеле</a><br><br>
+    <a href="{% url 'hotel-rating' %}"> Отзывы об отеле</a><br><br>
 
     <h3>Все номера отеля</h3>
     {% for room in all_rooms %}
