--- a/hotel/templates/hotel/ratings.html
+++ b/hotel/templates/hotel/ratings.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <div class="container">
+    <a href="{% url 'hotel-page' %}">На главную отеля</a>
     <form action="{% url 'add-rating' %}" method="POST">
     {% csrf_token %}
         <h1>Оставить отзыв</h1>
@@ -40,8 +41,66 @@
                 <option value="1">1</option>
             </select>
         </p>
+        <p>
+            <label for="equipment_quality">Качество оборудования: </label>
+            <select size="1" name="equipment_quality">
+                <option value="5">5</option>
+                <option value="4">4</option>
+                <option value="3">3</option>
+                <option value="2">2</option>
+                <option value="1">1</option>
+            </select>
+        </p>
+        <p>
+            <label for="food_quality">Качество еды: </label>
+            <select size="1" name="food_quality">
+                <option value="5">5</option>
+                <option value="4">4</option>
+                <option value="3">3</option>
+                <option value="2">2</option>
+                <option value="1">1</option>
+            </select>
+        </p>
+        <p>
+            <label for="location">Расположение: </label>
+            <select size="1" name="location">
+                <option value="5">5</option>
+                <option value="4">4</option>
+                <option value="3">3</option>
+                <option value="2">2</option>
+                <option value="1">1</option>
+            </select>
+        </p>
+        <p>
+            <label for="territory_condition">Состояние прилегающей территории: </label>
+            <select size="1" name="territory_condition">
+                <option value="5">5</option>
+                <option value="4">4</option>
+                <option value="3">3</option>
+                <option value="2">2</option>
+                <option value="1">1</option>
+            </select>
+        </p>
+
         <input type="submit" value="Отправить">
     </form>
+
+    <hr>
+    <p><b>Отзывы клиентов</b></p>
+    <p>Средняя оценка по категориям:<br>
+    Качество обслуживания - {{ avg_service_quality }}<br>
+    Чистота - {{ avg_cleanness }}<br>
+    Приветливость персонала - {{ avg_friendliness_of_staff }}<br>
+    Качество оборудования - {{ avg_equipment_quality }}<br>
+    Качество еды - {{ avg_food_quality }}<br>
+    Расположение - {{ avg_location }}<br>
+    Состояние прилегающей территории - {{ avg_territory_condition }}<br>
+    </p>
+    <p>Общая средняя оценка отеля: <br>
+    {{ avg_all }}</p>
+
+    <hr>
+
 </div>
 </body>
 </html>
