--- a/sales_manager/templates/sales_manager/book_view.html
+++ b/sales_manager/templates/sales_manager/book_view.html
@@ -6,7 +6,7 @@
     <i>{{ book.author.username }}</i><br>
     {{ book.date_publish|date:"d-m-Y" }}<br>
     <a href="{% url 'book-like' book_id=book.id redirect_url=redirect_url %}">
-        <i>likes {{ book.count_likes }}</i>
+        <i>likes {{ book.rate_avg }}</i>
     </a><br>
     {% if with_comment %}
         {% for comment in book.comments.all %}
