--- a/hotel/templates/hotel/filter_form.html
+++ b/hotel/templates/hotel/filter_form.html
@@ -1,24 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Search Room</title>
-</head>
-<body>
-<div class="container">
-    <h3>Поиск свободных номеров</h3>
-    <form class="form-inline" action="{% url 'search-room' %}" method="get">
-        <label for="date_from">Заезд:</label>
-        <input type="date" name='date_from' id="date_from" required><br><br>
-        <label for="date_to">Отъезд:</label>
-        <input type="date" name='date_to' id="date_to" required><br><br>
-        <select name="room_type" required>
+{% extends 'hotel/hotel_main.html' %}
+{% load static %}
+{% block title %}Поиск номера{% endblock %}
+
+{% block content %}
+
+<h1 class="text-center">Поиск свободных номеров</h1>
+
+<form action="{% url 'search-room' %}" method="get">
+  <div class="mb-3" >
+    <label for="date_from" class="form-label">Предполагаемая дата заезда</label>
+    <input type="date" class="form-control" id="date_from" name="date_from" required>
+  </div>
+  <div class="mb-3">
+    <label for="date_to" class="form-label">Предполагаемая дата отъезда</label>
+    <input type="date" class="form-control" id="date_to" name="date_to" required>
+  </div>
+    <div class="mb-3">
+    <label for="room_type" class="form-label">Тип номера</label>
+        <select name="room_type" id="room_type" class="form-control" name="room_type" required>
             {% for room_type in room_types %}
                 <option>{{ room_type.name }}</option>
             {% endfor %}
-        </select><br><br>
-        <input type="submit" value="Поиск">
-    </form>
-</div>
-</body>
-</html>
+        </select>
+    </div>
+    <button class="btn btn-outline-dark" type="submit">Поиск</button>
+</form>
+
+
+{% endblock %}
