--- a/hotel/templates/hotel/search.html
+++ b/hotel/templates/hotel/search.html
@@ -1,30 +1,33 @@
-<!DOCTYPE html>
-<a lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Отель</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-</head>
-<body>
-<div class="container">
-{{ user.username }}
-{% if user.is_authenticated %}
-    <a href="{% url 'logout' %}">logout</a>
-{% else %}
-    <a href="{% url 'login' %}">login</a>
-{% endif %}
-    <a href="{% url 'hotel-rating' %}"> Отзывы об отеле</a><br><br>
+{% extends 'hotel/hotel_main.html' %}
+{% load static %}
+{% block title %}Номера отеля{% endblock %}
 
-    <h3>Свободные номера отеля</h3>
+{% block content %}
+<h1 class="text-center">Свободные номера отеля</h1>
     {% for room in rooms %}
-        <a href="{% url 'room-detail' room_id=room.number %}">{{ room }}</a><br>
-        Площадь: {{ room.room_area }} кв.м.<br>
-        Люкс: {{ room.is_lux }}<br>
-        Цена: {{ room.price }} USD<br>
-        <hr>
+        <div class="card mb-3">
+          <div class="card-header">
+              <a href="{% url 'room-detail' room_id=room.number %}">{{ room }}</a>
+          </div>
+          <div class="card-body">
+              <div class="media">
+                  {% if room.image %}
+                      <img src="{{ room.image.url }}" width='30%' class="mr-3">
+                  {% else %}
+                      <img src="{% static 'd00a916b5761a4f49f95382d03ae6eb6.png' %}" width='30%' class="mr-3">
+                  {% endif %}
+                  <div class="media-body">
+                      <p class="card-text">
+                          Тип номера: {{ room.room_type }}<br>
+                          Площадь: {{ room.room_area }} кв.м.<br>
+                          Люкс: {{ room.is_lux }}<br>
+                          Цена: {{ room.price }} USD<br>
+                          Описание:<br> {{ room.description }}<br>
+                      </p>
+                  </div>
+              </div>
+          </div>
+        </div>
     {% endfor %}
 
-</div>
-</body>
-</html>
-
+{% endblock %}
