--- a/hotel/templates/hotel/hotel_main.html
+++ b/hotel/templates/hotel/hotel_main.html
@@ -1,10 +1,9 @@
-
 <!doctype html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -18,47 +17,47 @@
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
         crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
-        integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+        integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
+        crossorigin="anonymous"></script>
 
 <div class="container">
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
 
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'hotel-page' %}">Главная</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'filter-room' %}">Поиск номера</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Оценить отель</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="">Личный кабинет</a>
-        </li>
-      </ul>
-      <span class="d-flex">
-      <li class="nav-link disabled"  aria-disabled="true">{{ user.username }}</li>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'hotel-page' %}">Главная</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'filter-room' %}">Поиск номера</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'hotel-rating' %}">Оценить отель</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="">Личный кабинет</a>
+                    </li>
+                </ul>
+                <span class="d-flex">
+      <li class="nav-link disabled" aria-disabled="true">{{ user.username }}</li>
 
-    {% if user.is_authenticated %}
-        <a href="{% url 'logout' %}" class="btn btn-outline-dark">Выход</a>
-    {% else %}
-        <a href="{% url 'login' %}" class="btn btn-outline-dark">Войти</a>
-    {% endif %}
+                    {% if user.is_authenticated %}
+                        <a href="{% url 'logout' %}" class="btn btn-outline-dark">Выход</a>
+                    {% else %}
+                        <a href="{% url 'login' %}" class="btn btn-outline-dark">Войти</a>
+                    {% endif %}
 
       </span>
-    </div>
-  </div>
-</nav>
+            </div>
+        </div>
+    </nav>
 
 
-
-
-{% block content %}{% endblock %}
+    {% block content %}{% endblock %}
 
 
 </div>
