--- a/sales_manager/templates/sales_manager/book_view.html
+++ b/sales_manager/templates/sales_manager/book_view.html
@@ -1,3 +1,6 @@
+{% load static %}
+<script src="{% static 'script.js' %}"></script>
+
 <a href="{% url 'book-detail' book_id=book.id %}">
     {{ book.title }}
 </a><br>
@@ -15,7 +18,7 @@
         <p>{{ comment.text }}</p>
         <p>Date: {{ comment.date|date:"d-m-Y H:i:s" }}</p>
         <p>Author: {{ comment.user.username }}</p>
-        <p>Likes: {{ comment.count_likes }}</p>
-    {% endfor %}
+        <p class="comment-like" id="comment_like_{{ comment.id }}">Likes: {{ comment.count_likes }}</p>
+        {% endfor %}
 {% endif %}
 <br>
