--- a/hotel/templates/hotel/ratings.html
+++ b/hotel/templates/hotel/ratings.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<table class="table my-5">
+<table class="table table-striped table-hover">
   <thead>
     <tr>
       <th scope="col">Общий рейтинг отеля</th>
