--- a/sales_manager/templates/sales_manager/main.html
+++ b/sales_manager/templates/sales_manager/main.html
@@ -13,6 +13,7 @@
     {% else %}
         <a href="{% url 'login' %}">login</a>
     {% endif %}
+    <br><a href="{% url 'hotel-page' %}">Hotel</a>
 
     {% block content %}
     {% endblock %}
