--- a/hotel/templates/hotel/hotel_main.html
+++ b/hotel/templates/hotel/hotel_main.html
@@ -44,7 +44,7 @@
                     </li>
                     {% if user.is_staff %}
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Статистика пользователей</a>
+                            <a class="nav-link" href="{% url 'user-statistic' %}">Статистика пользователей</a>
                         </li>
                     {% endif %}
                     {% endif %}
